Fixed second image not scaling issue and cropped the first to make them similar size

--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,7 @@ body {
 }
 
 .illustration {
+  width: 100%;
   max-width: 100%;
   height: auto;
   display: block;    
